--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,14 +1,182 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
-  <display-name>TalentManagementTool</display-name>
+  <display-name>TMT</display-name>
   <welcome-file-list>
-    <welcome-file>login.html</welcome-file>
-    <welcome-file>login.htm</welcome-file>
-    <welcome-file>login.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
+    <welcome-file>home.jsp</welcome-file>
   </welcome-file-list>
+  <session-config>
+    <session-timeout>20</session-timeout>
+  </session-config>
+  <servlet>
+    <description></description>
+    <display-name>DBConnect</display-name>
+    <servlet-name>DBConnect</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.DBConnect</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>DBConnect</servlet-name>
+    <url-pattern>/DBConnect</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>AddEmployee</display-name>
+    <servlet-name>AddEmployee</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.AddEmployee</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AddEmployee</servlet-name>
+    <url-pattern>/AddEmployee</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>DeleteServlet</display-name>
+    <servlet-name>DeleteServlet</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.DeleteServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>DeleteServlet</servlet-name>
+    <url-pattern>/DeleteServlet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ViewEmployee</display-name>
+    <servlet-name>ViewEmployee</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.ViewEmployee</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ViewEmployee</servlet-name>
+    <url-pattern>/ViewEmployee</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>AddTeam</display-name>
+    <servlet-name>AddTeam</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.AddTeam</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AddTeam</servlet-name>
+    <url-pattern>/AddTeam</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ViewTeam</display-name>
+    <servlet-name>ViewTeam</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.ViewTeam</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ViewTeam</servlet-name>
+    <url-pattern>/ViewTeam</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>FetchModule</display-name>
+    <servlet-name>FetchModule</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.FetchModule</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>FetchModule</servlet-name>
+    <url-pattern>/fetchmodule.jsp</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>FetchProject</display-name>
+    <servlet-name>FetchProject</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.FetchProject</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>FetchProject</servlet-name>
+    <url-pattern>/fetchproject.jsp</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>AddModule</display-name>
+    <servlet-name>AddModule</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.AddModule</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AddModule</servlet-name>
+    <url-pattern>/AddModule</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>FetchTeam</display-name>
+    <servlet-name>FetchTeam</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.FetchTeam</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>FetchTeam</servlet-name>
+    <url-pattern>/FetchTeam</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>SearchEmployee</display-name>
+    <servlet-name>SearchEmployee</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.SearchEmployee</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SearchEmployee</servlet-name>
+    <url-pattern>/SearchEmployee</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>AssignTeam</display-name>
+    <servlet-name>AssignTeam</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.AssignTeam</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AssignTeam</servlet-name>
+    <url-pattern>/AssignTeam</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>AssignTeamFinal</display-name>
+    <servlet-name>AssignTeamFinal</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.AssignTeamFinal</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AssignTeamFinal</servlet-name>
+    <url-pattern>/AssignTeamFinal</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>EditModule</display-name>
+    <servlet-name>EditModule</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.EditModule</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>EditModule</servlet-name>
+    <url-pattern>/EditModule</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ViewReport</display-name>
+    <servlet-name>ViewReport</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.ViewReport</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ViewReport</servlet-name>
+    <url-pattern>/ViewReport</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>FetchTeamEmployees</display-name>
+    <servlet-name>FetchTeamEmployees</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.FetchTeamEmployees</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>FetchTeamEmployees</servlet-name>
+    <url-pattern>/FetchTeamEmployees</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ChartServlet</display-name>
+    <servlet-name>ChartServlet</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.ChartServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ChartServlet</servlet-name>
+    <url-pattern>/piechart</url-pattern>
+  </servlet-mapping>
   <servlet>
     <description></description>
     <display-name>AdminLogin</display-name>
@@ -18,5 +186,225 @@
   <servlet-mapping>
     <servlet-name>AdminLogin</servlet-name>
     <url-pattern>/AdminLogin</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>Registration</display-name>
+    <servlet-name>Registration</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.Registration</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Registration</servlet-name>
+    <url-pattern>/Registration</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>CheckSessionServlet</display-name>
+    <servlet-name>CheckSessionServlet</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.CheckSessionServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>CheckSessionServlet</servlet-name>
+    <url-pattern>/CheckSessionServlet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>Logout</display-name>
+    <servlet-name>Logout</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.Logout</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Logout</servlet-name>
+    <url-pattern>/Logout</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>FetchTeamChart</display-name>
+    <servlet-name>FetchTeamChart</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.FetchTeamChart</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>FetchTeamChart</servlet-name>
+    <url-pattern>/FetchTeamChart</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>DisplayEmpList</display-name>
+    <servlet-name>DisplayEmpList</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.DisplayEmpList</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>DisplayEmpList</servlet-name>
+    <url-pattern>/DisplayEmpList</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>AddSelect</display-name>
+    <servlet-name>AddSelect</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.AddSelect</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AddSelect</servlet-name>
+    <url-pattern>/AddSelect</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>StoreServlet</display-name>
+    <servlet-name>StoreServlet</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.StoreServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>StoreServlet</servlet-name>
+    <url-pattern>/StoreServlet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>EditEmployee</display-name>
+    <servlet-name>EditEmployee</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.EditEmployee</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>EditEmployee</servlet-name>
+    <url-pattern>/EditEmployee</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ViewReportR3</display-name>
+    <servlet-name>ViewReportR3</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.ViewReportR3</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ViewReportR3</servlet-name>
+    <url-pattern>/ViewReportR3</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ViewReportPrimier</display-name>
+    <servlet-name>ViewReportPrimier</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.ViewReportPrimier</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ViewReportPrimier</servlet-name>
+    <url-pattern>/ViewReportPrimier</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>AddTeamSelect</display-name>
+    <servlet-name>AddTeamSelect</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.AddTeamSelect</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AddTeamSelect</servlet-name>
+    <url-pattern>/AddTeamSelect</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>StoreTeam</display-name>
+    <servlet-name>StoreTeam</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.StoreTeam</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>StoreTeam</servlet-name>
+    <url-pattern>/StoreTeam</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>AddModuleSelect</display-name>
+    <servlet-name>AddModuleSelect</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.AddModuleSelect</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AddModuleSelect</servlet-name>
+    <url-pattern>/AddModuleSelect</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>StoreModule</display-name>
+    <servlet-name>StoreModule</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.StoreModule</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>StoreModule</servlet-name>
+    <url-pattern>/StoreModule</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>EditTeam</display-name>
+    <servlet-name>EditTeam</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.EditTeam</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>EditTeam</servlet-name>
+    <url-pattern>/EditTeam</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>FetchModuleDetails</display-name>
+    <servlet-name>FetchModuleDetails</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.FetchModuleDetails</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>FetchModuleDetails</servlet-name>
+    <url-pattern>/FetchModuleDetails</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>FetchTeamDetails</display-name>
+    <servlet-name>FetchTeamDetails</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.FetchTeamDetails</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>FetchTeamDetails</servlet-name>
+    <url-pattern>/FetchTeamDetails</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>EditModuleFinal</display-name>
+    <servlet-name>EditModuleFinal</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.EditModuleFinal</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>EditModuleFinal</servlet-name>
+    <url-pattern>/EditModuleFinal</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>EditTeamFinal</display-name>
+    <servlet-name>EditTeamFinal</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.EditTeamFinal</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>EditTeamFinal</servlet-name>
+    <url-pattern>/EditTeamFinal</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>AddBudget</display-name>
+    <servlet-name>AddBudget</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.AddBudget</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AddBudget</servlet-name>
+    <url-pattern>/AddBudget</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>FetchbudgetDetail</display-name>
+    <servlet-name>FetchbudgetDetail</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.FetchbudgetDetail</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>FetchbudgetDetail</servlet-name>
+    <url-pattern>/FetchbudgetDetail</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>DeleteTeam</display-name>
+    <servlet-name>DeleteTeam</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.DeleteTeam</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>DeleteTeam</servlet-name>
+    <url-pattern>/DeleteTeam</url-pattern>
   </servlet-mapping>
 </web-app>
