--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -407,4 +407,23 @@
     <servlet-name>DeleteTeam</servlet-name>
     <url-pattern>/DeleteTeam</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>AddTeamManually1</display-name>
+    <servlet-name>AddTeamManually1</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.AddTeamManually1</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AddTeamManually1</servlet-name>
+    <url-pattern>/AddTeamManually1</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>AddTeamManually2</display-name>
+    <servlet-name>AddTeamManually2</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.AddTeamManually2</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AddTeamManually2</servlet-name>
+    <url-pattern>/AddTeamManually2</url-pattern>
 </web-app>
