gunveen:for servlet

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -517,4 +517,13 @@
     <servlet-name>BudgetServlet</servlet-name>
     <url-pattern>/BudgetServlet</url-pattern>
   </servlet-mapping>
+   <description></description>
+    <display-name>AddTeamExcel</display-name>
+    <servlet-name>AddTeamExcel</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.AddTeamExcel</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AddTeamExcel</servlet-name>
+    <url-pattern>/AddTeamExcel</url-pattern>
+  </servlet-mapping>
 </web-app>
